deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sical
  labels:
    name: sical
    environment: development
